Add div with class container, div with class container-board, and div with class container-symbol
Add div with class container for contain structure of tic tac toe user interface.

Add div with class container-board for contain nine part of  board tic tac toe.

Add nine div with class container-symbol for contain symbol of players choice.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="container-board">
+            <div class="container-symbol"></div>
+            <div class="container-symbol"></div>
+            <div class="container-symbol"></div>
+            <div class="container-symbol"></div>
+            <div class="container-symbol"></div>
+            <div class="container-symbol"></div>
+            <div class="container-symbol"></div>
+            <div class="container-symbol"></div>
+            <div class="container-symbol"></div>
+        </div>
+    </div>
 </body>
 </html>
