--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div class="container-symbol"></div>
             <div class="container-symbol"></div>
         </div>
+        <button class="start">start</button>
     </div>
 </body>
 </html>
