--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <div class="container">
         <div class="container-board">
-            <div class="container-symbol"></div>
-            <div class="container-symbol"></div>
-            <div class="container-symbol"></div>
-            <div class="container-symbol"></div>
-            <div class="container-symbol"></div>
-            <div class="container-symbol"></div>
-            <div class="container-symbol"></div>
-            <div class="container-symbol"></div>
-            <div class="container-symbol"></div>
+            <div class="container-symbol" id="box-1"></div>
+            <div class="container-symbol" id="box-2"></div>
+            <div class="container-symbol" id="box-3"></div>
+            <div class="container-symbol" id="box-4"></div>
+            <div class="container-symbol" id="box-5"></div>
+            <div class="container-symbol" id="box-6"></div>
+            <div class="container-symbol" id="box-7"></div>
+            <div class="container-symbol" id="box-8"></div>
+            <div class="container-symbol" id="box-9"></div>
         </div>
         <button class="start">start</button>
     </div>
