--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="game-status"></div>
         <div class="container-board">
             <div class="container-symbol" id="box-1"></div>
             <div class="container-symbol" id="box-2"></div>
