--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <div class="container">
         <div class="game-status"></div>
+        <div class="player1-status"></div>
+        <div class="player2-status"></div>
         <div class="container-board">
             <div class="container-symbol" id="box-1"></div>
             <div class="container-symbol" id="box-2"></div>
