Feat display game turn for players
Display name of player who get first turn. When user click start button, execute text content div with class game-turn with input module pattern: IIFE turn property.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="game-status"></div>
         <div class="player1-status"></div>
         <div class="player2-status"></div>
+        <div class="game-turn"></div>
         <div class="container-board">
             <div class="container-symbol" id="box-1"></div>
             <div class="container-symbol" id="box-2"></div>
