Feat change name for players
Add selector DOM for input player1 name and input player2 name inside playerInput module pattern: IIFE. Choose playerInput module pattern: IIFE as scope of selector input player1 name and player2 name for organize selector DOM.

Provide input element for change player name. first input for player1 and second input for player2. When one of players click change name button, display change their name in player1 status and player2 status.

Add condition that have statement when input name have empty string value. name of players still have default name for player1 or player2 when one of players click change name button.

Change text content to display data of player1 and player2 name when one of players click change name button so both of players can see their new name in real time.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
         <div class="player1-status"></div>
         <div class="player2-status"></div>
         <div class="game-turn"></div>
+        <div>
+            <div class="change-data">
+                <label for="player1-name"> player1 name
+                    <input type="text" id="player1-name">
+                </label>
+            </div>
+            <div>
+                <label for="player2-name"> player2 name
+                    <input type="text" id="player2-name">
+                </label>
+            </div>
+            <button class="change-name">change name</button>
+        </div>
         <div class="container-board">
             <div class="container-symbol" id="box-1"></div>
             <div class="container-symbol" id="box-2"></div>
